--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
+backports.ssl-match-hostname==3.5.0.1
+docker-py==1.8.1
+ipaddress==1.0.16
+json2html==1.0.1
 requests==2.10.0
 requests-unixsocket==0.1.5
+six==1.10.0
 urllib3==1.15.1
 web.py==0.37
+websocket-client==0.37.0
+wheel==0.24.0
